juno/qa/apps/portal-ui/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portal-ui
  name: portal-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portal-ui
  template:
    metadata:
      labels:
        app: portal-ui
    spec:
      containers:
      - image: index.docker.io/ferlabcrsj/cqdg-portal-ui:qa-c80a85a2f93729c22cb0e0d6a103b2a3f380eaf1-1714673724 # {"$imagepolicy": "cqdg-qa-fluxcd:portal-ui"}
        name: portal-ui
        resources:
          requests:
            memory: "512Mi"
            cpu: '1.00'
          limits:
            memory: "1024Mi"
            cpu: '2.00'
