juno/qa/apps/portal-ui/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal-ui
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - portail.qa.juno.cqdg.ferlab.bio
      secretName: cqdg-ingress-certificate
  rules:
    - host: portail.qa.juno.cqdg.ferlab.bio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portal-ui
                port:
                  number: 3000
